# compute-tutorial

./: organisation.md  pyproject.toml  questions.md  run-poetry.sh  run.sh  tutorial.md
.devcontainer/: devcontainer.json
conda-gpu-ssh/: Dockerfile
conda-nogpu/: Dockerfile
conda-nogpu-ssh/: Dockerfile
poetry-nogpu/: Dockerfile
ubuntu-nogpu/: Dockerfile
