[tool.poetry]
name = "compute-tutorial"
version = "0.1.0"
description = ""
authors = ["Tasko Olevski <tasko.olevski@sdsc.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
